# torch_quaterion

./: README.md  pyproject.toml
torch_quaterion/: __init__.py  quaterion.py
torch_quaternion/: __init__.py  dualQuaternion.py  quaternion.py
torch_quaternion/ackermann/: ackermann.py  rl.py
torch_quaternion/kinematic/: __init__.py  dynamic.py  forward_kinematics.py  inverse_kinematics.py  rigid_body.py  screw.py  twist.py  wrench.py
torch_quaternion/motion/: trajectory.py
